# sodapy

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
examples/: basic_queries.ipynb  basic_queries.py  soql_queries.ipynb  soql_queries.py
sodapy/: __init__.py  constants.py  socrata.py  sodapy.py  utils.py
tests/: conftest.py  test_socrata.py  test_sodapy.py  test_utils.py
tests/cassettes/test_socrata/: test_all_datasets.yaml  test_get.yaml  test_get_all_hit_limit.yaml  test_get_datasets.yaml  test_get_datasets_paginate.yaml  test_get_metadata.yaml  test_get_metadata_and_attachments.yaml  test_get_metadata_and_attachments_missing.yaml  test_get_metadata_missing.yaml  test_get_xml.yaml
tests/cassettes/test_sodapy/: test_download_attachments.yaml  test_get_all.yaml  test_get_csv.yaml  test_get_missing.yaml
tests/test_data/: get_songs_unicode.json
